--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,13 @@ matplotlib==3.5.1
 numpy==1.21.5
 opencv_python==4.6.0.66
 Pillow==9.2.0
-streamlit==1.12.0
 tensorflow==2.9.1
 tensorflow_hub==0.12.0
+Flask==1.1.1
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+Werkzeug==0.15.5
+flasgger==0.9.4
+streamlit
